--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+@media(max-width: 1080px) {
+    html {
+        font-size: 93.75%;
+    }
+}
+
+@media(max-width: 720px) {
+    html {
+        font-size: 87.5%;
+    }
+}
+
 :root {
     --white: #FFF;
     --gray-50: #F7F8FA;
@@ -22,9 +35,15 @@ body {
     background: var(--gray-50)
 }
 
-body, input, textarea {
-    font: 500 1rem;
+body, input, textarea, button {
+    font: 500 1rem Inter, sans-serif;
     color: var(--gray-500)
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
+    font-family: Lexend, sans-serif;
+    color: var(--gray-800)
 }
 
 h1 {
