--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -22,9 +22,30 @@
 
     footer {
         align-self: stretch;
-        &.empty {
+        &.empty .progress {
             opacity: 0.5;
         }
+    }
+}
+
+.currentEpisode {
+    text-align: center;
+    img {
+        border-radius: 1.5rem;
+    }
+
+    strong {
+        display: block;
+        margin-top: 2rem;
+        font: 600 1.25rem Lexend, sans-serif;
+        line-height: 1.75rem;
+    }
+
+    span {
+        display: block;
+        margin-top: 1rem;
+        opacity: 0.6;
+        line-height: 1.5rem;
     }
 }
 
@@ -78,14 +99,33 @@
         border: 0;
         font-size: 0;
         cursor: pointer;
+        transition: filter 0.2s;
+
+        // Anotar
+        &:disabled {
+            cursor: default;
+            opacity: 0.5;
+        }
+
+        &:hover:not(:disabled) {
+            filter: brightness(0.8)
+        }
+
+        // Anotar snippet
+        &.isActive {
+            filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+        }
+        &.isActive :hover{
+            filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+        }
 
         &.playButton {
             width: 4rem;
             height: 4rem;
             border-radius: 2rem;
             background: var(--purple-400);
-            &:hover {
-                background: var(--purple-300);
+            &:hover:not(:disabled) {
+                filter: brightness(0.95)
             }
         }
     }
